@@ -57,7 +57,20 @@ $Id$
                 <example type="incorrect">Ёмкость аккумулятора составляет 60 <marker>А/ч</marker>.</example>
                 <example type="correct">Ёмкость аккумулятора составляет 60 А*ч.</example>
                 <example type="correct">Ёмкость аккумулятора составляет 60 А⋅ч.</example>
-            </rule>          
+            </rule>
+             <rule> 
+                <pattern>
+                    <token>мА</token>
+                    <token>/</token>  
+                    <token>ч</token>          
+                </pattern>
+                <message>Имелось в виду <suggestion>мА⋅ч</suggestion>?</message>
+                <url>http://ru.wikipedia.org/wiki/%D0%90%D0%BC%D0%BF%D0%B5%D1%80-%D1%87%D0%B0%D1%81</url>
+                <short>Логическая ошибка.</short>
+                <example type="incorrect">Ёмкость аккумулятора составляет 900 <marker>мА/ч</marker>.</example>
+                <example type="correct">Ёмкость аккумулятора составляет 900 мА*ч.</example>
+                <example type="correct">Ёмкость аккумулятора составляет 900 мА⋅ч.</example>
+            </rule>            
         </rulegroup>  
         <rulegroup id="BLIZKIJ_BLIZHNIJ" name="Употребление слов «близкий/ближний»">
             <rule> 
@@ -66,6 +79,7 @@ $Id$
                     <token>свет</token>
                 </pattern>
                 <message>Имелось в виду <suggestion>ближний \2</suggestion>?</message>
+                <url>http://ru.wiktionary.org/wiki/%D0%B1%D0%BB%D0%B8%D0%B6%D0%BD%D0%B8%D0%B9</url>
                 <short>Логическая ошибка.</short>
                 <example type="incorrect">Водитель включил <marker>близкий свет</marker> фар.</example>
                 <example type="correct">Водитель включил ближний свет фар.</example>
@@ -76,6 +90,7 @@ $Id$
                     <token regexp = "yes" >человек|друг|товарищ</token>
                 </pattern>
                 <message>Имелось в виду <suggestion>близкий \2</suggestion>?</message>
+                <url>http://ru.wiktionary.org/wiki/%D0%B1%D0%BB%D0%B8%D0%B7%D0%BA%D0%B8%D0%B9</url>
                 <short>Логическая ошибка.</short>
                 <example type="incorrect">Он - <marker>ближний друг</marker>.</example>
                 <example type="correct">Он - близкий друг.</example>
