@@ -14,6 +14,7 @@ LanguageTool Change Log
 -Russian:
     - added big wordlist to spellcheck dictionary. Thanks for wordlist to Dmitri Gabinski
     - fixed wrong tag in tagger dictionary:  ADJ_Comp --> ADJ_Sup,  ADJ_S --> ADJ_Com
+    - added/improved several rules
        
     
 -Asturian, Italian, Lithuanian, Malayalam, Swedish, and Tagalog have been switched
